--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.1.1",
     "@mdi/font": "^7.4.47",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
